# cfs

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  AUTHORS  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  CTestConfig.cmake  Chronometer.cpp  Chronometer.h  ConformingClosure.h  Edge.cpp  Edge.h  Element.h  External_NiHu.cmake  GeometrySensor.cpp  GeometrySensor.h  GridLevel.cpp  GridLevel.h  Hexahedron.cpp  Hexahedron.h  HexahedronTopology.h  Jacobian.cpp  Jacobian.h  Makefile  MeshReader.cpp  MeshReader.h  MeshWriter.h  MultilevelGrid.cpp  MultilevelGrid.h  Octahedron.cpp  Octahedron.h  OctahedronTopology.h  Pool.h  Quadrangle.cpp  Quadrangle.h  QuadrangleTopology.h  README.md  (+20 more)
Testsuite/: CMakeLists.txt  CTestCustom.cmake.in  CoupledCfsTest.cmake.in  CoupledFoamTest.cmake.in  CoupledTest.cmake.in  FindPythonModules.cmake  PythonTest.cmake.in  README.md  StandardTest.cmake.in  TestMacros.cmake  compare_hist_file.py  compare_images.py  compare_info_xml.py  ctest_settings.cmake
Testsuite/PYTHON/: CMakeLists.txt
Testsuite/TESTSUIT/: CMakeLists.txt
Testsuite/share/: tests.py  testsuite2wiki.py
cfsdeps/arpack/: CMakeLists.txt  External_ARPACK.cmake  RiceBSD.doc  RiceBSD.txt  arpack-2.1-redhat.patch  arpack-arscnd-3.patch  arpack-gfortran-etime-intrinsic.patch  arpack-ifort-cpu_time.patch  arpack-patch.cmake.in  arpack-post_install.cmake.in  arpack_no_blas.patch  arpack_no_system_blas.patch  readme.arpack
cfsdeps/bzip2/: CMakeLists.txt  External_bzip2.cmake  bzip2-mingw.patch  bzip2-patch.cmake.in  bzip2-shared-patch.cmake.in  bzip2-static-patch.cmake.in
cfsdeps/ccmio/: CMakeLists.txt  CMakeLists_libadf.txt  CMakeLists_libccmio.txt  External_CCMIO.cmake  ccmio-patch.cmake.in
cfsdeps/dumas/: CMakeLists.txt  External_Dumas.cmake  dumas-patch.cmake.in
cfsdeps/feast/: CMakeLists.txt  External_FEAST.cmake  Makefile.in  feast-patch.cmake.in  feast-post_install.cmake.in  feast_cpp.h  feast_mkl_spblas.fi  libnum.f90  make.inc.in  wrapper_mkl_sparse.c
cfsdeps/gidpost/: CMakeLists.txt  External_GiDpost.cmake  gidpost-file-append.patch  gidpost-fortran.patch  gidpost-hdf5-lite.patch  gidpost-install.patch  gidpost-patch.cmake.in  gidpost-sprintf-format.patch  gidpost_cmake.patch
cfsdeps/ilupack/: CMakeLists.txt  External_ILUPACK.cmake  External_ILUPACK.cmake.tmp_for_fabian  README  cc_etimes.c  ilupack-amd-preprocess.patch  ilupack-compiler.patch  ilupack-disable-saddle-point-stuff.patch  ilupack-dmumps-open64.patch  ilupack-globals.patch  ilupack-header.patch  ilupack-mainsym3.patch  ilupack-nomore-malloc-header.patch  ilupack-patch.cmake.in  ilupack-post_install.cmake.in  ilupack-sparspak-revrse.patch  ilupack-use-lapack-driver.patch  ilupack2.2.1_src.tgz  ilupack2.2.1_src.tgz.md5  ilupack_config.h.in  ilupackparallel-patch.cmake.in
cfsdeps/lapack/: CMakeLists.txt  External_LAPACK.cmake  lapack-for-cfs.patch  lapack-patch.cmake.in  lapack-post_install.cmake.in
cfsdeps/lis/: CMakeLists.txt  External_LIS.cmake  Win32.Mak  lis-complex.patch  lis-configure.cmake.in  lis-patch.cmake.in  lis-post_install.cmake.in  lis-win-make.patch  lis_install.cmake.in  quadmath.h
cfsdeps/metis/: CMakeLists.txt  External_METIS.cmake  External_metis.cmake  license.txt  metis-gcc44.patch  metis-patch.cmake.in  metis-windows.patch
cfsdeps/muparser/: CMakeLists.txt  External_muParser.cmake  muparser-clang-nested-anon-types.patch  muparser-dummy-math.patch  muparser-intel-atomic.patch  muparser-patch.cmake.in  muparser-pow-intel.patch  muparser-replace-autoptr-by-boost-movelib-unique-ptr.patch  muparser-strfun45.patch
cfsdeps/scpip/: CMakeLists.txt  External_SCPIP.cmake  scpip-dum2.patch  scpip-gfortran.patch  scpip-ifx.patch  scpip-patch.cmake.in  scpip.tar.bz2  scpip.tar.bz2.md5
cfsdeps/snopt/: CMakeLists.txt  External_SNOPT.cmake  add_usrmjr_callback.patch  snopt-patch.cmake.in  snopt-post_install.cmake.in  snopt-win-patch.cmake.in
cfsdeps/suitesparse/: CMakeLists.txt  External_SuiteSparse.cmake  SuiteSparse-METIS-CMake.patch  blas_lapack_gfortran.h  suitesparse-cmake-for-cfs.patch  suitesparse-cmake.patch  suitesparse-fortran-iface.patch  suitesparse-getrusage.patch  suitesparse-patch.cmake.in  suitesparse-ranlib.patch  suitesparse_install.cmake.in
cfsdeps/superlu/: CMakeLists.txt  External_SuperLU.cmake  superlu-download-untar.cmake.in  superlu-matgen.patch  superlu-patch.cmake.in  superlu-post_install.cmake.in  superlu_remove_zgem_m_v.patch
share/python/: CMakeLists.txt  abaqus_reader.py  analyze_opt.py  analyze_springs.py  basecell.py  bench_mat.xml  benchmark.py  cdash.py  cdash2junit.py  cfs-testsuite-extractor.py  cfs_utils.py  colormaps.py  common.py  continuation.py  convert_mat_xml.py  convert_xmf2mesh.py  copy_density.py  copy_ref_files.py  create_binary_archive.py  create_density.py  create_mesh.py  create_mesh_special.py  diff_ref.py  draw_profile_functions.py  extrude_mesh.py  featureviz.py  find_bloch_band_gaps.py  find_mg_levels.py  geometry_mesher.py  h5info.py  hdf5_tools.py  hdfviz.py  hessian_ipopt.py  hessian_scipy.py  install-cfs.py  marching_cubes.py  matviz.py  matviz_2d.py  matviz_3d_ortho.py  matviz_io.py  (+40 more)
share/scripts/: CMakeLists.txt  IdentifyCCompiler.c  IdentifyCXXCompiler.cpp  IdentifyFortranCompiler.F90  README  abaqus_reader.py  adjustDesign.py  bootstrap_devel_machine.cmd  bootstrap_devel_machine.sh  bootstrap_devel_machine_win.cmake  build_tee.pl  cfs  cfs-debug  cfs-testsuite-extractor.py  cfs.bat  cfs_grid.py  cfs_utils.py  cfsdat  cfstool  cfstool.bat  common.bat  common.sh  compile_mkl_test.sh.in  continuation.py  convert_fms_to_hom.py  cplreader  create-sparse-gid-mesh-2d-quadratic.py  create_density.py  create_mesh.py  cubemesh.pl  density-to-png.py  distro.sh  extract_kkt.py  generate-standalone-bootstrap-sh.cmake  getPointData_hdf5.py  getSliceData_hdf5.py  getdate.bat  gid_screenshots.py  h5tool  h5tool.bat  (+50 more)
source/CoupledPDE/: AcouMechCoupling.cc  AcouMechCoupling.hh  BasePairCoupling.cc  BasePairCoupling.hh  CMakeLists.txt  CoupledPDEDef.cc  CoupledPDEDef.hh  CouplingMemento.cc  CouplingMemento.hh  (+38 more)
(+10073 files in other folders)
